# LAMBDA

./: .gitignore  CITATION.cff  CONFIG.md  LICENSE  README.md  REFERENCES.bib  lambda_rf_example.py  pyproject.toml
assets/: default_drone_rcs.h5
configs/: scenarios.json
examples/: generate_beam_labels.py  load_csi_npz.py  postprocess_existing_csi.py
lambda_rf/: __init__.py  __main__.py  cli.py  config.py  generate_array_csi.py  generate_radar.py  generate_subcarrier_csi.py  paths.py  visualize_radar.py
lambda_rf/tools/: __init__.py  read_csi.py
lambda_rf/utils/: __init__.py  array_csi.py  radar.py  subcarrier_csi.py
notebooks/: 00_load_csi.ipynb  01_array_and_subcarrier_csi.ipynb  02_generate_radar_and_visualize.ipynb  03_beam_label_generation.ipynb  04_localization_rgb_depth_baseline.ipynb
scripts/: package_csi_by_band.sh  package_csi_frequency_dirs.py  package_multitraj_csi_by_band.py
tests/: test_array_csi.py  test_csi_infra.py  test_deepmimo_compat.py  test_mimo_subcarrier_formula.py  test_radar.py  test_subcarrier_csi.py
